feat: add multi-agent research analysis workflow
Four-agent system for research project analysis:
- DataAnalystAgent (Haiku): Examines uploaded data files with Python
- ResearchExplorerAgent (Sonnet): Analyzes project submission content
- GapAnalysisAgent (Opus): Identifies missing research elements
- OverviewGeneratorAgent (Sonnet): Creates comprehensive overview

Workflow orchestration:
- Sequential agent execution with context passing
- Generates RESEARCH_OVERVIEW.md in project folder
- Saves workflow_results.json with all agent outputs

Integration:
- Server triggers workflow after form submission
- Background execution via threading
- CLI interface for manual workflow runs

Model selection per copilot-instructions.md:
- Opus: Complex reasoning (gap analysis)
- Sonnet: Coding/agents (exploration, overview)
- Haiku: High-volume/classification (data analysis)

--- a/research_intake_form.html
+++ b/research_intake_form.html
@@ -648,6 +648,10 @@
                     <h3>Project Created</h3>
                     <p>Your research project has been initialized.</p>
                     <div class="project-path" id="projectPath"></div>
+                    <p style="margin-top: 1rem; font-size: 0.875rem; color: var(--text-muted);">
+                        Agent workflow is now analyzing your project in the background.<br>
+                        Check the project folder for RESEARCH_OVERVIEW.md when complete.
+                    </p>
                 </div>
             </div>
         </form>
